# pz-random

./: CMakeLists.txt  LICENSE  README.md  pz-random-main.kdev4  pz-random.kdev4
.kdev4/: pz-random.kdev4  pz.kdev4
Analysis/: pzanalysis.cpp  pzanalysis.h  pzanalysiserror.cpp  pzeuleranalysis.cpp  pznonlinanalysis.cpp  pznonlinanalysis.h
Common/: pzreal.cpp  pzreal.h
Geom/: TPZGeoExtend.h
LinearSolvers/: bicg.h  bicgstab.h  cg.h  gmres.h  ir.h
Material/: CMakeLists.txt  TPZLinearConvecDiff.cpp  TPZMatDualHybridPoisson.h  pzbndcond.h  pzmaterial.cpp  pzmaterial.h
Matrix/: TPZPardisoControl.cpp  TPZPardisoControl.h  TPZPardisoSolver.cpp  TPZPardisoSolver.h  pzblockdiag.cpp  pzblockdiag.h  pzskylmat.cpp  (+3 more)
Projects/: CMakeLists.txt
Projects/elasticity/: CMakeLists.txt  main.cpp
Projects/geomecproblems/: CMakeLists.txt  footing.h  main.cpp  slope.h  slopecphi.h
Projects/randomdarcy/: CMakeLists.txt  darcytools.h  fieldtools.h  main.cpp  plasticitytools.h  readgidmesh.cpp
Projects/randomfem/: CMakeLists.txt  KLAnalysis.cpp  main.cpp
Projects/randomfemplasticity/: CMakeLists.txt  KLMaterial.cpp  KLMaterial.h  KLStrMatrix.h  main.cpp  readgidmesh.h
Projects/randomfemplasticitymulthread/: CMakeLists.txt  KLStrMatrix.cpp  main.cpp
Projects/randomfemplasticityv2/: .main.cpp.kate-swp  CMakeLists.txt  KLAnalysis.cpp  KLAnalysis.h  main.cpp
Projects/stochasticslope/: CMakeLists.txt  KLAnalysis.cpp  KLAnalysis.h  darcytools.h  fieldtools.h  main.cpp  plasticitytools.h  plotfield.nb
Projects/tests/: CMakeLists.txt  create-sparse.nb  main.cpp  vector.txt
(+260 files in other folders)
