# @file neopz/Projects/CMakeList.txt  -- First CMake file for Projects directory 

add_subdirectory(randomfem)

add_subdirectory(randomfemplasticity)

add_subdirectory(randomfemplasticityv2)

add_subdirectory(randomfemplasticitymulthread)

add_subdirectory(randomdarcy)

add_subdirectory(stochasticslope)

add_subdirectory(elasticity)

add_subdirectory(geomecproblems)
